Bug 521799 - "Undefined" shown next to access points after upgrading to Qt 6.11
Summary: "Undefined" shown next to access points after upgrading to Qt 6.11
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 6.7.0
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-06-19 21:17 UTC by Oleg
Modified: 2026-07-06 20:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.6
Sentry Crash Report:


Attachments
screenshot (98.63 KB, image/avif)
2026-06-19 21:17 UTC, Oleg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oleg 2026-06-19 21:17:02 UTC
Created attachment 193390 [details]
screenshot

DESCRIPTION
After upgrading to Qt 6.11 there's "undefined" text next to access points in kickoff.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.7.0
KDE Frameworks Version: 6.27.0
Qt Version: 6.11.1
Kernel Version: 7.0.12-1-cachyos (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 9800X3D 8-Core Processor
Memory: 64 ГиБ of RAM (62.4 ГиБ usable)
Graphics Processor: AMD Radeon RX 9070 XT
Manufacturer: ASUS
Comment 1 cwo 2026-06-20 06:31:11 UTC
Can reproduce. Likely another case of the Qt 6.11 change with regard to invalid QVariants and required properties.
Comment 2 Bug Janitor Service 2026-06-20 12:20:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6778
Comment 3 cwo 2026-06-22 17:12:09 UTC
Git commit dce1d200e3951d45e2eb8020e929cb25e8183f80 by Christoph Wolk.
Committed on 22/06/2026 at 15:36.
Pushed by cwo into branch 'master'.

applets/kicker: return empty string for computermodel description

ComputerModel only has a description for some places entries, not
all of them. We return invalid QVariant if there isn't any, which
used to work but is now "undefined" on required properties in Qt 6.11.

Instead, return empty string.
FIXED-IN: 6.6.6

M  +1    -0    applets/kicker/computermodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/dce1d200e3951d45e2eb8020e929cb25e8183f80
Comment 4 cwo 2026-06-22 19:15:15 UTC
Git commit fe704e7b97e338be9cd26aae3865e26d8e56795f by Christoph Wolk.
Committed on 22/06/2026 at 17:13.
Pushed by cwo into branch 'Plasma/6.7'.

applets/kicker: return empty string for computermodel description

ComputerModel only has a description for some places entries, not
all of them. We return invalid QVariant if there isn't any, which
used to work but is now "undefined" on required properties in Qt 6.11.

Instead, return empty string.
FIXED-IN: 6.6.6


(cherry picked from commit dce1d200e3951d45e2eb8020e929cb25e8183f80)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +1    -0    applets/kicker/computermodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/fe704e7b97e338be9cd26aae3865e26d8e56795f
Comment 5 cwo 2026-07-06 20:31:51 UTC
Git commit e7e4b15a1da94d7392612427b54921f679444892 by Christoph Wolk.
Committed on 06/07/2026 at 17:46.
Pushed by cwo into branch 'Plasma/6.6'.

applets/kicker: return empty string for computermodel description

ComputerModel only has a description for some places entries, not
all of them. We return invalid QVariant if there isn't any, which
used to work but is now "undefined" on required properties in Qt 6.11.

Instead, return empty string.
FIXED-IN: 6.6.6


(cherry picked from commit dce1d200e3951d45e2eb8020e929cb25e8183f80)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

(cherry picked from commit fe704e7b97e338be9cd26aae3865e26d8e56795f)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +1    -0    applets/kicker/computermodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e7e4b15a1da94d7392612427b54921f679444892