applets/kicker: return empty string for computermodel description

ComputerModel only has a description for some places entries, not
all of them. We return invalid QVariant if there isn't any, which
used to work but is now "undefined" on required properties in Qt 6.11.

Instead, return empty string.

BUG: 521799
FIXED-IN: 6.6.6